# mesa

./: .gitignore  meson.build  meson_options.txt
include/drm-uapi/: genbu_drm.h
src/: meson.build
src/compiler/nir/: nir.h  nir_lower_system_values.c  nir_opt_algebraic.py
src/gallium/: meson.build
src/gallium/auxiliary/pipe-loader/: pipe_loader_drm.c
src/gallium/auxiliary/target-helpers/: drm_helper.h  drm_helper_public.h  sw_helper.h
src/gallium/drivers/genbu/: genbu_context.c  genbu_context.h  genbu_public.h  genbu_reg.h  genbu_resource.c  genbu_resource.h  genbu_resource_buffer.c  genbu_resource_tex.c  genbu_screen.c  genbu_screen.h  genbu_state.c  genbu_state.h  genbu_surface.c  genbu_surface.h  genbu_winsys.h  meson.build
src/gallium/drivers/i915/: i915_debug.c  i915_debug.h
src/gallium/targets/dri/: meson.build  target.c
src/gallium/winsys/genbu/drm/: genbu_drm_buffer.c  genbu_drm_public.h  genbu_drm_winsys.c  genbu_drm_winsys.h  meson.build
src/microsoft/: README.md  meson.build
src/microsoft/clc/: clc_compiler.c  clc_compiler.h  clc_compiler_test.cpp  meson.build
src/microsoft/compiler/: dxil.h  dxil_buffer.c  dxil_buffer.h  dxil_buffer_test.c  dxil_container.c  dxil_container.h  dxil_module.c  dxil_module.h  dxil_module_test.c  meson.build  nir_to_dxil.c  nir_to_dxil.h
